DDF-xxxx Updating docs for expiration date plugin.

--- a/distribution/docs/src/main/resources/_contents/_plugins/expiration-date-pre-ingest-plugin-contents.adoc
+++ b/distribution/docs/src/main/resources/_contents/_plugins/expiration-date-pre-ingest-plugin-contents.adoc
@@ -1,10 +1,10 @@
 ==== Expiration Date Pre-Ingest Plugin
 
-The Expiration Date plugin updates metacard expiration dates.
+The Expiration Date plugin adds or updates expiration dates which can be used later for archiving old data.
 
 ===== Installing the Expiration Date Pre-Ingest Plugin
 
-The Expiration Date Pre-Ingest Plugin is installed by default with a standard installation in the ${ddf-catalog} application.
+The Expiration Date Pre-Ingest Plugin is not installed by default with a standard installation. The `catalog-plugin-expirationdate` feature can be installed manually in the ${ddf-catalog} application.
 
 ===== Configuring the Expiration Date Pre-Ingest Plugin
 
